tests/specs/run/no_config_auto_discovery_for_local_script/no_auto_discovery.out
TS2584 [ERROR]: Cannot find name 'document'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
  console.log(document);
              ~~~~~~~~
    at [WILDCARD]frontend_work.ts:2:15

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
